Fix loader spinners broken in sources list / calendar events

--- a/src/public/styles/_sources_list.scss
+++ b/src/public/styles/_sources_list.scss
@@ -7,7 +7,7 @@
 #sources-list {
     color: #4A4A4A;
 
-    .loading {
+    .loader-spinner {
         width: 14px;
         height: 14px;
         border-width: 0.15rem;
@@ -33,7 +33,7 @@
         }
 
         input,
-        .loading {
+        .loader-spinner {
             margin: 0.25rem 0.3rem 0 0;
         }
     }
