--- a/src/public/styles/custom_fc.scss
+++ b/src/public/styles/custom_fc.scss
@@ -801,7 +801,7 @@ a.fc-more:hover {
             background-size: 30px 30px;
         }
 
-        .loading {
+        .loader-spinner {
             margin: 0.1rem 0.1rem 0 0;
             width: 0.5rem;
             height: 0.5rem;
